# ir-simX

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  changelog.md  pyproject.toml  repo.md  run_original.sh  setup.py  simd_plan.md
.github/: FUNDING.yml  SECURITY.md
.github/workflows/: python-version-test.yml
benchmarks/: benchmark_maze.py  benchmark_paper.py  maze_benchmark.yaml
cpp/: CMakeLists.txt  __init__.py
cpp/bindings/: pybind_module.cpp
cpp/include/: astar.h  batch_world.h  geometry.h  lidar.h  simd_config.h  world.h
cpp/src/: astar.cpp  batch_collision.cpp  batch_kinematics.cpp  batch_lidar.cpp  batch_world.cpp  collision.cpp  lidar.cpp  world.cpp
docs/locale/zh_CN/LC_MESSAGES/: concepts.po
docs/locale/zh_CN/LC_MESSAGES/usage/: configure_sensor.po
docs/source/: concepts.md
docs/source/usage/: configure_sensor.md
irsim/: __init__.py  version.py
irsim/env/: _batch_cpp_sim.py  _cpp_sim.py  batch_env_base.py  env_base.py  env_logger.py  env_plot.py  env_plot_helpers.py
irsim/lib/algorithm/: rvo.py
irsim/lib/handler/: geometry_handler.py  kinematics_handler.py
irsim/lib/path_planners/: a_star.py
irsim/util/: __init__.py  util.py
irsim/world/: __init__.py  object_base.py  object_factory.py  object_plot.py  world.py
irsim/world/map/: __init__.py  map_core.py  map_utils.py
irsim/world/obstacles/: __init__.py  obstacle_static.py
irsim/world/sensors/: _lidar_cpp.py  fmcw_lidar2d.py  lidar2d.py
irsim_core/: CMakeLists.txt  __init__.py
irsim_core/bindings/: pybind_module.cpp
irsim_core/include/: collision.h  geometry.h  kinematics.h  lidar.h  world.h
irsim_core/src/: collision.cpp  geometry.cpp  kinematics.cpp  lidar.cpp  world.cpp
tests/: test_all_objects.py  test_arrow_default.py  test_coverage_extra.py  test_cpp_core.py  test_dynamic_rotation.py  test_dynamic_rotation.yaml  test_env.py  test_plot.py  test_rect_rotation.yaml  test_sfm.py  test_world_map.py
tests/visual/: 01_small_irregular.py  02_concave_notches.py  03_mixed_cluster.py  04_benchmark.py  05_complex_generated.py  06_debug_collision.py  06_debug_phantom.py  09_test_1200.py  analyze_log.py  compare_gui.py  compare_many.py  gui_debug.py  run_exp_persist.py
usage/12dynamic_obstacle/: dynamic_obstacle.yaml
usage/17gui_world/: gui.py  gui.yaml
usage/24_dynamic_cpp_demo/: circle_demo.yaml  polygon_demo.yaml  rect_demo.yaml  run_demo.py
